2004-11-26 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Remove some useless methods in gdcm::Document, gdcm::Header and gdcm::File
   * Rename gdcmHeaderHelper.[h|cxx] to gdcmSerieHeader.[h|cxx] to be coherent
     between the class name and the file name

2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/ : fix compilation warnings for the Write method (2 different
     proto). So Rename 'Write(ifstream* fp' into 'WriteContent(ifstream* fp'
     fix compilation warnings for the gdcm::Document::TransferSyntaxStrings
     variable... create a static method in gdcm::Document to access to
     this variable content.

2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocument.[h|cxx] : set the Transfert Syntax values to the header
     file, to be accessed by other files (like gdcmFile). Remove commented
     code. Move the change of the header to the gdcmFile, using the
     DocEntryArchive
   * src/gdcmHeader.[h|cxx] : the write is completely made in the Header.
     To be sure of that (and simplify calls), the Write of the header now
     gets a file name and not a file pointer (std::ifstream).
   * src/gdcmFile.[h|cxx] : apply the write file type to the header, using the
     DocEntryArchive. Remove all open of the written file

2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.cxx : compilation bug fix for the vtk part

2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocument.cxx : fix bug... test if the fp is opened to use it
   * src/gdcmPixelConvert.cxx : calculate the image size when while the grab of
     the header.
   * src/gdcmFile.[h|cxx] : remove PixelRead and ImageDataSizeRaw variables and
     some corresponding methods. Write correctly the file and check before
     write
   * Test/TestCopyDicom.cxx, TestReadWriteReadCompare.cxx,
     TestAllReadCompareDicom.cxx : pass the write of images to RGB and test